--- a/litrreview/templates/ticket_edit.html
+++ b/litrreview/templates/ticket_edit.html
@@ -11,6 +11,8 @@
     <div>
         <img src="{{ ticket.image.url }}" alt="no image" width="90" height="144">
     </div>
-    <button class="btn btn-info ml-2" type="submit">Envoyer</button>
+    <!-- <button class="btn btn-info ml-2" type="submit">Envoyer</button> -->
+    <button class="btn btn-primary float-right" type="submit">Envoyer</button>
+
 </form>
 {% endblock content %}
