add condition to home page for authentificated user

--- a/litrreview/templates/ticket_list.html
+++ b/litrreview/templates/ticket_list.html
@@ -27,7 +27,7 @@ Tickets
             </div>
             <div class="row no-gutters">
                 <div class="col-sm-2">
-                    <img src="{{ ticket.image.url }}" class="img-fluid" alt="...">
+                    <img src="{{ ticket.image.url }}" class="card-img img-fluid" alt="...">
                 </div>
                 <div class="col-sm-7">
                     <div class="card-body">
