--- a/litrreview/templates/home.html
+++ b/litrreview/templates/home.html
@@ -6,6 +6,7 @@ Home
 {% endblock title %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <div class="jumbotron">
     <h1 class="display-4">LittrReview app</h1>
     <p class="lead">Un site de critique de livres fait en Django.</p>
@@ -13,4 +14,19 @@ Home
         <a class="btn btn-primary btn-lg" href="{% url 'ticket_list' %}" role="button">Votre Flux</a>
     </p>
 </div>
+{% else %}
+<div class="jumbotron">
+    <h1 class="display-4">LittrReview app</h1>
+    <p class="lead">Un site de critique de livres fait en Django.</p>
+    <p class="lead">
+        <!-- <a class="btn btn-primary btn-lg" href="{% url 'ticket_list' %}" role="button">Votre Flux</a> -->
+        <form class="form-inline ml-auto">
+            <a href="{% url 'login' %}" class="btn btn-outline-secondary">Connexion</a>
+            <a href="{% url 'signup' %}" class="btn btn-primary ml-2">S'inscrire</a>
+        </form>
+    </p>
+</div>
+{% endif %}
+
+
 {% endblock content %}
