--- a/litrreview/templates/review_delete.html
+++ b/litrreview/templates/review_delete.html
@@ -6,13 +6,21 @@
 <div>
     <h2>{{ review.ticket.title }}</h2>
     <p>{{review.ticket.user}} | {{ review.ticket.time_created }}</p>
+
+    {% if review.ticket.description %}
     <p>{{ review.ticket.description }}</p>
+    {% endif %}
+
+
+    {% if  review.ticket.image %}
     <img src="{{ review.ticket.image.url }}" alt="no image" width="90" height="144">
+    {% endif %}
+
 </div>
 <form method="post">
     {% csrf_token %}
     <p>Are you sure you want to delete "{{ review.headline }}" ?</p>
-    <button class="btn btn-danger ml-2" type="submit">Confirmer</button>
-
+    <button class="btn btn-danger" type="submit">Confirmer</button>
+    <a class="btn btn-primary" href="{% url 'ticket_current_user_list' %}" role="button">Annuler</a>
 </form>
 {% endblock content %}
