--- a/litrreview/templates/review_edit.html
+++ b/litrreview/templates/review_edit.html
@@ -45,8 +45,8 @@
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
-            <button class="btn btn-primary float-right" type="submit">Envoyer</button>
-
+            <button class="btn btn-primary" type="submit">Envoyer</button>
+            <a class="btn btn-danger" href="{% url 'ticket_current_user_list' %}" role="button">Annuler</a>
         </form>
     </div>
 </div>
