--- a/litrreview/templates/ticket_new.html
+++ b/litrreview/templates/ticket_new.html
@@ -8,5 +8,8 @@
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Envoyer</button>
+    <a class="btn btn-danger" href="{% url 'ticket_list' %}" role="button">Annuler</a>
+
 </form>
+
 {% endblock content %}
